<resources>
    <string name="app_name">InMedia</string>
    <string name="title_profile">Profile</string>
    <string name="title_feed">Feed</string>
    <string name="title_events">Events</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="empty_events">There are no events.\nIf you create a new event, it will appear here</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="retry_loading">Retry</string>
    <string name="error_loading">Something went wrong</string>
    <string name="Sing_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_message">"New message"</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="edit_text">Edit text</string>
    <string name="name">Name</string>
    <string name="register_now">Register now</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="something_went_wrong">Something went wrong. Try again</string>
    <string name="preposition_of_time">at</string>
    <string name="sign_in">Sign In</string>
    <string name="unparticipate">Не принимать участие</string>
    <string name="datetime">Date of the event</string>
    <string name="event_type">Event type (online/offline)</string>
    <string name="place_of_work">Places of job</string>
    <string name="employment_date">Employment date:</string>
    <string name="set_date">Set date</string>
    <string name="dismissal_date">Dismissal date:</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="error_empty_job_fields">Not all fields were filled</string>
</resources>