<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employment_date"
        android:textSize="24sp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_date"
        android:textSize="24sp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/start_date"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/finish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismissal_date"
        android:textSize="24sp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/start"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/set_date"
        android:textSize="24sp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/finish_date"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/company_name"
        android:textSize="24sp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/finish"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/position"
        android:textSize="24sp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_start_date"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_cancel_24"
        app:layout_constraintTop_toTopOf="@id/start"
        app:layout_constraintBottom_toBottomOf="@id/start"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_finish_date"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_cancel_24"
        app:layout_constraintTop_toTopOf="@id/finish"
        app:layout_constraintBottom_toBottomOf="@id/finish"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>