<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.netology.inmedia.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.netology.inmedia.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed">

        <action
            android:id="@+id/action_feedFragment_to_attach_photo_viewer"
            app:destination="@id/attach_photo_viewer" />

        <action
            android:id="@+id/action_feedFragment_to_new_post_fragment"
            app:destination="@id/fragment_new_post" />
    </fragment>


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.netology.inmedia.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/attach_photo_viewer"
        android:name="ru.netology.inmedia.ui.AttachViewerFragment"
        tools:layout="@layout/fragment_attach_photo_viewer" />

    <fragment
        android:id="@+id/fragment_new_post"
        android:name="ru.netology.inmedia.ui.NewPostFragment"
        tools:layout="@layout/fragment_new_post" />

</navigation>